@@ -22,7 +22,7 @@ package Net::FullAuto;
 #######################################################################
 
 
-our $VERSION='0.9999999956';
+our $VERSION='0.9999999957';
 
 
 use 5.005;
