@@ -22,6 +22,15 @@
 
 2014-07-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
+        * Version 0.9999999957 released.
+
+        * Added FIGlet font install.
+
+        * New version of Term::Menus paired with this release.
+
+
+2014-07-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
         * Version 0.9999999956 released.
 
         * AWS login assistance added.
